# eternity

./: CMakeLists.txt  README.md  affichage.c  affichage.h  build.sh  color.c  color.h  eternity.c  eternity.h  functions.c  functions.h
.build/: CMakeCache.txt  Makefile  cmake_install.cmake
puzzles/: eternityII_256.txt  eternityII_36.txt  eternityII_72.txt
